Adding a new route that accepts an image URI.

--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -19,6 +19,7 @@ torch = ">=1.13.1"
 torchvision = {version = "^0.15.0.dev20230304+cpu", source = "pytorch"}
 dlib = {git = "https://github.com/davisking/dlib.git"}
 mmcv = "^1.7.1"
+requests = "^2.28.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "==3.4"
